syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message ChatRequest {
    optional string chat_id = 1;
    string user_id = 2;
    string user_message = 3;
}

message ChatResponse {
    string chat_id = 1;
    string user_id = 2;
    string content = 3;
}

service ChatService {
    rpc Chat(ChatRequest) returns (ChatResponse) {}
    rpc ChatStream(ChatRequest) returns (stream ChatResponse) {}
}